Configured tests and made them work, connected firebase

--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 //TODO
 mobile responsivity
 
-tests
+archetypes
 
-Сохранять стейт характеристик в бд, фетчить стейт и показывать характеристики
-fetch tests info to account page
 suggestions and courses
 update results
 show and compare with prev results
+
+fix redux/ at lest fix images
