--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,9 @@ mobile responsivity
 
 archetypes
 
+make suggestions based on tags
 suggestions and courses
+store courses in db 
 update results
 show and compare with prev results
 
